# fastapi-production-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: d6f7d07a12f7_initialize_models.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  health.py  predict.py  stream.py  users.py
app/core/: config.py  logging_config.py  security.py
app/db/: base.py
app/db/models/: user.py
app/ml/: dummy_model.pkl  dummy_model.py  model_loader.py
app/schemas/: predict.py  user.py
app/services/: prediction_service.py  realtime_service.py  user_service.py
scripts/: create_dummy_model.py
tests/: conftest.py  test_auth.py  test_health.py  test_predict.py  test_realtime_integration.py  test_stream.py  test_users.py
